# OpenFEP

./: .gitignore  CLAUDE.md  M2.12_M3.0_Roadmap.md  M2.8_M2.11_Roadmap.md  M2.8_Milestone_Prompt.md  M5_Personality_Grounding_Roadmap.md  M6.5_Implementation_Prompt.md  M6.6_Implementation_Prompt.md  M6.7_Implementation_Prompt.md  M6_Resource_Bounded_Cognitive_Loop_Roadmap.md  PLANS.md  Pre_M3_Readiness_Checklist.md  README.md  Strict_Audit_Framework.md  main.py  pyproject.toml  tmp_accept_state_trace.jsonl
artifacts/: m12_1_acceptance_report.json  m12_2_acceptance_report.json  m1_memory_gate.json  m1_narrative_trace.json  m1_runtime_trace.json  m1_sleep_consolidation.json  m210_audit_summary.json  m210_longitudinal_stability.json  m210_personality_anova.json  m210_profile_behavior_summary.json  m212_adapter_trace_sample.json  m212_io_bus_schema.json  m213_access_ablation.json  m213_workspace_broadcast_trace.jsonl  m214_homeostasis_timeline.json  m214_interrupt_recovery.json  m215_identity_commitment_trace.json  m215_self_inconsistency_repair.json  m216_social_continuity_trace.jsonl  m216_trust_repair_benchmark.json  m217_external_action_trace.jsonl  m217_governance_decisions.json  m218_continuity_preservation_trace.json  m218_lifelong_soak_summary.json  m220_narrative_initialization_ablation.json  m220_narrative_initialization_stress.json  m220_narrative_initialization_trace.json  m221_adversarial_surface.json  m221_conflict_boundedness.json  m221_multilingual_robustness.json  m221_open_narrative_trace.json  m221_paraphrase_stability.json  m222_ablation_comparison.json  m222_long_horizon_summary.json  m222_mixed_stress_trace.json  m222_resource_guard.json  m222_restart_continuity.json  m223_commitment_alignment.json  m223_identity_update_bounds.json  m223_protocol_audit.json  (+185 more)
data/: m212_acceptance_state.json  m212_acceptance_trace.jsonl  m217_state.json  m218_state.json  m2_accept_10_state.json  m2_accept_10_trace.jsonl  m2_identity_100_state.json  m2_identity_100_trace.jsonl  m2_mem_20_continue_trace.jsonl  m2_mem_20_reset_state.json  m2_mem_20_reset_trace.jsonl  m2_mem_40_cont_state.json  m2_mem_40_cont_trace.jsonl  m47_corpus.json  m54_classifier_gate.jsonl  m54_classifier_train.jsonl  predictive_config.example.json  restart_test_state.json  restart_test_trace.jsonl  restart_test_trace2.jsonl  review_50_state.json  review_50_trace.jsonl  review_corebeliefs_state.json  segment_v0_1_state.json  (+6 more)
(+1212 files in other folders)
