[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "segmentum"
version = "0.1.0"
description = "Project Segmentum survival-first predictive coding prototype"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
llm = ["httpx>=0.27,<1"]

[tool.setuptools]
packages = ["segmentum"]

[tool.pytest.ini_options]
addopts = "-m 'not stress'"
markers = [
    "stress: long-running soak, benchmark, and endurance tests excluded from default pytest runs",
]
